# FoodInsight

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_dev.py  uecfood100_config.json
admin/: __init__.py  app.py
admin/static/: styles.css
admin/templates/: index.html  roi.html
api/: __init__.py  client.py
app/: .env.example  README.md  index.html  package.json  vite.config.ts
app/dev-dist/: sw.js
app/src/: App.vue  vite-env.d.ts
app/src/assets/: main.css
app/src/components/: LastUpdated.vue  OfflineIndicator.vue  PWAUpdatePrompt.vue  RefreshIndicator.vue  SkeletonCard.vue  SnackCard.vue  StatusBadge.vue
config/: __init__.py  platform.py  settings.py
detection/: __init__.py  detector.py  inventory.py  models.py  motion.py  service.py  tracker.py
docs/: FoodInsight PRD.md  FoodInsight Solution Architecture.md  FoodInsight UX Specification.md
docs/stories/: Epic1-Edge-Detection-System.md  Epic2-Cloud-Backend-Consumer-App.md  Epic3-UX-Foundation.md  Epic4-UX-Delight.md  Epic5-UX-Polish.md  Epic6-Edge-Admin-UX-Revamp.md  README.md
privacy/: __init__.py  pipeline.py
scripts/: README.md  batch_detection.py  convert_uec_to_yolo.py  create_food_collage.py  create_hotdog_collage.py  deploy_model.sh  rename_folders.py  start-dev.sh  stop-dev.sh  test_detection.py  train.py
server/: Dockerfile  README.md  openapi.json  pyproject.toml
server/app/: __init__.py  config.py  database.py  main.py
server/app/auth/: __init__.py  token.py
server/app/db/: __init__.py  models.py
server/app/routers/: admin.py  health.py  inventory.py  mock.py
server/app/services/: __init__.py  firestore.py  sqlite.py
server/scripts/: generate_token.py  init_db.py
server/tests/: __init__.py  test_health.py
systemd/: foodinsight.service
tests/: __init__.py  test_inventory.py  test_motion.py  test_privacy.py
(+5 files in other folders)
