[project]
name = "foodinsight-edge"
version = "0.1.0"
description = "FoodInsight Edge Device - Smart snack inventory monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FoodInsight Team" }
]

dependencies = [
    "ultralytics>=8.3.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "flask>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# rpi dependencies installed manually on Raspberry Pi (not in lockfile)
# rpi = ["picamera2>=0.3.0"]

[project.scripts]
foodinsight = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detection", "admin", "api", "config", "privacy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
